--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 			<version>${gson.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
